# ghostling

./: AGENTS.md  CMakeLists.txt  README.md  flake.nix  main.c
.direnv/: flake-profile-1-link
